--- a/sass/main.scss
+++ b/sass/main.scss
@@ -189,7 +189,7 @@ span{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 60vh;
+    // height: 60vh;
     padding: 0 4px 0 4px;
     // margin-top: 20px;
     // border-bottom: solid 0.5px rgb(119, 119, 253);
@@ -318,7 +318,7 @@ span{
 
 .content-two {
     font-family: 'Libre Baskerville', serif;
-    margin: 80px 0 60px 20px;
+    margin: 30px 0 30px 20px;
     padding: 10px;
 
     .bottom {
@@ -605,15 +605,14 @@ span{
               justify-content: space-evenly;
 
               .projects {
-                //   width: 100%;
+                  width: 100%;
                   display: flex;
                   flex-direction: row;
                   justify-content: space-evenly;
 
-                  .mashup {
+                  img {
                       width: 100%;
                   }
-            
               }
           }
 
@@ -753,6 +752,16 @@ span{
         h2 {
             color: $textcolour;
             font-weight: bold;
+            margin: 20px 0 20px 0;
+            text-align: center;
+        }
+
+        .para {
+            text-align: center;
+            margin: 10px 0 20px 0;
+            font-size: 18px;
+            font-style: italic;
+            line-height: 22px;
         }
 
         .deets1 {
@@ -870,7 +879,7 @@ span{
                 line-height: 22px;
             }
 
-            a {
+            .play {
                 text-align: center;
                 // margin-left: 40px;
                 width: 100px;
@@ -884,12 +893,12 @@ span{
                 text-transform: uppercase;
             }
             
-            a:hover {
+            .play:hover {
                 background: rgba(85, 2, 2, 0.03);;
                 cursor: pointer;
             }
             
-            a:active {
+            .play:active {
               box-shadow: none;
               top: 5px;
             }
@@ -911,12 +920,65 @@ span{
         }
 
 
-        h2 {
+        .Title {
             text-align: center;
             margin: 40px 0 20px 0;
         }
 
-        p {
+        .para {
+            text-align: center;
+            margin: 10px 0 20px 0;
+            font-size: 18px;
+            font-style: italic;
+            line-height: 22px;
+        }
+
+        a {
+            text-align: center;
+            // margin-left: 40px;
+            width: 100px;
+            background: transparent;
+            color: #e55743;
+            box-shadow: 0 5px 0 rgb(247, 23, 23);
+            color: rgb(0, 0, 0);
+            padding: 5px;
+            position: relative;
+            text-decoration: none;
+            text-transform: uppercase;
+        }
+        
+        a:hover {
+            background: rgba(85, 2, 2, 0.03);;
+            cursor: pointer;
+        }
+        
+        a:active {
+          box-shadow: none;
+          top: 5px;
+        }
+
+}
+    .deets4 {
+        border-top: solid 1px $textcolour;
+        text-align: center;
+        // align-items: center;
+        width: 100%;
+        // height: 40vh;
+        padding: 3px;
+        margin: 60px 0 20px 0;
+
+        img {
+            width: 100%;
+            margin: 20px 0 30px 30px;
+        }
+
+
+        .Title {
+            text-align: center;
+            margin: 40px 0 20px 0;
+        }
+
+        .para {
             text-align: center;
             margin: 10px 0 20px 0;
             font-size: 18px;
