--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,7 @@
             <section class="content-one container">
                 <div class="info">
                         <h2>Collins Ilo</h2>
-                        <p class="text1">Web Designer, Full Stack Developer, Motion and Graphic Designer.<p>
+                        <p class="text1">Web Designer, Motion and Graphic Designer. Currently studying Interactive Media Design at Fanshawe College...<p>
                 </div>
                     <button class="button">
                            <a href="#">Read More</a>
@@ -28,30 +28,21 @@
                     <h3>Featured Projects</h3>
                 <div class="info2">
                     <div class="projects">
-                        <div class="mashup">
                             <h2 class="hidden">Wine Mashup</h2>
                             <img src="images/mashup.svg" alt="mashup wine label">
-                            {{!-- <p class="hidden">The task was to create a beer or wine mashup for a random brand. Designing the logo, coming up with the concept of what the brand of beer or wine stands for...</p> --}}
-                        </div>
-                        <div class="organ">
-                            <img class="hidden desktop" src="images/organ_awareness.jpg" alt="organ awareness brochure">
-                        </div>
-                        <div class="interactive">
+                            <img class="hidden desktop" src="images/thermo.jpg" alt="Thermo-security Mockup">
                             <img class="hidden tablet" src="images/infographic.jpg" alt="infographic Mockup">
-                        </div>  
                     </div>
-                    <!-- <div class="projects"></div>
-                    <div class="projects"></div> -->
                 </div>
                 <button class="button">
-                        <a href="portfolio.html">View More</a>
+                        <a href="/portfolio">View More</a>
                          <div class="button__horizontal"></div>
                          <div class="button__vertical"></div>
                 </button>
-
+{{!-- 
                 <div class="bottom">
                     <p class="text1 text2">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio error voluptates ratione ullam delectus? Alias ea culpa fuga ipsa tenetur est vero quis perferendis incidunt reiciendis! Officia possimus ullam doloremque.
                     </p>
-                </div>
+                </div> --}}
             </section>
