--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js"></script>
   </head>
   <body>
 
@@ -16,7 +18,7 @@
                 <nav class="headNav">
                     <ul class="navList">
                         <li class="navitem"><a href="/">Home</a></li>
-                        <li class="navitem"><a href="#">About</a></li>
+                        <li class="navitem"><a href="/about">About</a></li>
                         <li class="navitem"><a href="/portfolio">Portfolio</a></li>
                         <li class="navitem"><a href="/contact">Contact</a></li>
                     </ul>
