--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,23 +26,23 @@
 
                   <section class="content-two container">
                     <h3>Featured Projects</h3>
-                <div class="info2">
-                    <div class="projects">
-                            <h2 class="hidden">Wine Mashup</h2>
-                            <img src="images/mashup.svg" alt="mashup wine label">
-                            <img class="hidden desktop" src="images/thermo.jpg" alt="Thermo-security Mockup">
-                            <img class="hidden tablet" src="images/infographic.jpg" alt="infographic Mockup">
+                    <div class="info2">
+                     <div class="junior">
+                        <img src="images/mashup.svg" alt="Wine Mashup Picture">
+                            <span>Wine Mashup</span>
                     </div>
-                </div>
+                      <div class="junior">
+                        <img src="images/infographic.jpg" alt="Infographic">
+                            <span>Interactive Infographic</span>
+                    </div>
+                      <div class="junior">
+                        <img src="images/thermo.jpg" alt="Thermo-security">
+                            <span>Thermo-Security</span>
+                    </div>
+                    </div>
                 <button class="button">
                         <a href="/portfolio">View More</a>
                          <div class="button__horizontal"></div>
                          <div class="button__vertical"></div>
                 </button>
-{{!-- 
-                <div class="bottom">
-                    <p class="text1 text2">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio error voluptates ratione ullam delectus? Alias ea culpa fuga ipsa tenetur est vero quis perferendis incidunt reiciendis! Officia possimus ullam doloremque.
-                    </p>
-                </div> --}}
             </section>
