--- a/sass/main.css
+++ b/sass/main.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   max-width: 1200px;
   margin-top: 20px;
+  padding: 20px;
 }
 
 * {
@@ -10,19 +11,14 @@
 }
 
 body {
-  background-color: #f8efef;
+  background-color: #faf8f8;
   margin: 0 auto;
   font-family: Helvetica, sans-serif;
   -webkit-transition: all .2s ease;
   transition: all .2s ease;
 }
 
-img {
-  width: 100%;
-}
-
 span {
-  position: fixed;
   z-index: 0;
   top: 80px;
   width: 100%;
@@ -361,17 +357,6 @@ span {
   text-decoration: none;
 }
 
-.talk {
-  font-size: 24px;
-  font-family: 'Libre Baskerville', serif;
-  margin-bottom: 20px;
-  padding: 5px;
-  text-align: center;
-  font-weight: bold;
-  letter-spacing: 0.5px;
-  line-height: 36px;
-}
-
 .content-two {
   font-family: 'Libre Baskerville', serif;
   margin: 30px 0 30px 20px;
@@ -391,6 +376,7 @@ span {
 }
 
 .content-two .info2 {
+  margin-left: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -401,11 +387,47 @@ span {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 10px;
-  margin: 0 auto;
+}
+
+.content-two .info2 .junior {
+  width: 70%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  overflow: hidden;
+  -webkit-transition: .5s;
+  transition: .5s;
+  margin: 40px 0 40px 2%;
+  -webkit-box-shadow: 0 15px 15px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 15px 15px rgba(0, 0, 0, 0.1);
+  line-height: 0;
+}
+
+.content-two .info2 .junior > img {
+  width: 100%;
+  height: calc(50% - 50vh);
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.content-two .info2 .junior > span {
+  font-size: 3.8vh;
+  display: block;
+  text-align: center;
+  line-height: 2.6;
+}
+
+.content-two .info2 .junior:hover {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+}
+
+.content-two .info2 .junior:hover > img {
+  width: 100%;
+  height: 100%;
 }
 
 .content-two .button {
@@ -497,35 +519,6 @@ span {
   text-decoration: none;
 }
 
-.content-two .projects {
-  margin-top: 10px;
-}
-
-.content-two .projects img {
-  display: block;
-  width: 100%;
-  padding: 3px;
-  margin-bottom: 40px;
-}
-
-.content-two .projects h2 {
-  color: #0727da;
-  font-size: 24px;
-  font-family: 'Libre Baskerville', serif;
-  margin-bottom: 20px;
-  padding: 5px;
-  text-align: center;
-  font-weight: bold;
-  letter-spacing: 0.5px;
-  line-height: 36px;
-}
-
-.content-two .projects p {
-  padding: 3px;
-  line-height: 18px;
-  text-align: center;
-}
-
 .mainFooter {
   margin-bottom: 20px;
   padding: 4px;
@@ -615,16 +608,6 @@ span {
   .content-one .info h2 {
     margin-top: 20px;
   }
-  .content-two .projects img {
-    width: 100%;
-  }
-}
-
-@media screen and (min-width: 380px) {
-  .content-two .projects p {
-    line-height: 22px;
-    padding: 5px;
-  }
 }
 
 @media screen and (min-width: 440px) {
@@ -657,9 +640,6 @@ span {
   .content-one .text1 {
     line-height: 24px;
   }
-  .content-two .projects p {
-    text-align: center;
-  }
 }
 
 @media screen and (min-width: 660px) {
@@ -675,25 +655,6 @@ span {
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
-  }
-  .content-two .info2 .projects {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-  }
-  .content-two .info2 .projects img {
-    width: 100%;
-  }
-  .content-two h2 {
-    text-align: center;
   }
   .mainHeader .headNav {
     font-size: 36px;
@@ -757,12 +718,6 @@ span {
   }
   .talk {
     font-size: 36px;
-  }
-  .content-two h2 {
-    font-size: 36px;
-  }
-  .content-two h3 {
-    font-size: 32px;
   }
   .container {
     margin-left: 20px;
@@ -1213,5 +1168,59 @@ input[type=submit] {
   img {
     margin-right: 20px;
   }
+}
+
+.about {
+  font-family: 'Libre Baskerville', serif;
+  padding: 5px;
+  margin: 20px 10px 30px 10px;
+}
+
+.about .story {
+  text-align: center;
+  padding: 5px;
+  font-size: 16px;
+  margin-bottom: 40px;
+}
+
+.about .junior {
+  width: 80%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  overflow: hidden;
+  -webkit-transition: .5s;
+  transition: .5s;
+  margin: 0 2%;
+  -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+  line-height: 0;
+}
+
+.about .junior > img {
+  width: 200%;
+  height: calc(50% - 50vh);
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.about .junior > span {
+  font-size: 3.8vh;
+  display: block;
+  text-align: center;
+  line-height: 2.6;
+}
+
+.about .junior:hover {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+}
+
+.about .junior:hover > img {
+  width: 100%;
+  height: 100%;
 }
 /*# sourceMappingURL=main.css.map */
