--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,7 @@ $bgcolour: rgb(235, 225, 225);
    margin: 0 auto;
    max-width: 1200px;
    margin-top: 20px;
-//    padding: 3px;
+   padding: 20px;
 }
 
 * {
@@ -13,19 +13,17 @@ $bgcolour: rgb(235, 225, 225);
   }
 
 body{
-    background-color: rgb(248, 239, 239);
+    background-color: rgb(250, 248, 248);
     margin: 0 auto;
     // align-items: center;
     font-family: Helvetica, sans-serif;
     transition: all .2s ease;
 }
 
-img {
-    width: 100%;
-}
+
 
 span{
-    position: fixed;
+    // position: fixed;
     z-index: 0;
     top: 80px;
     width: 100%;
@@ -304,17 +302,6 @@ span{
     }
 }
 
-.talk {
-    font-size: 24px;
-    font-family: 'Libre Baskerville', serif;
-    margin-bottom: 20px;
-    padding: 5px;
-    text-align: center;
-    font-weight: bold;
-    letter-spacing: 0.5px;
-    line-height: 36px;
-    // color: $textcolour;
-}
 
 .content-two {
     font-family: 'Libre Baskerville', serif;
@@ -335,12 +322,42 @@ span{
     
 
    .info2 {
+       margin-left: 20px;
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
-       align-items: center;
-       padding: 10px;
-       margin: 0 auto;
+
+       .junior {
+        width: 70%;
+        flex: 1;
+        overflow: hidden;
+        transition: .5s;
+        margin: 40px 0 40px 2%;
+        box-shadow: 0 15px 15px rgba(0,0,0,.1);
+        line-height: 0;
+      }
+      
+      .junior > img {
+        width: 100%;
+        height: calc(50% - 50vh);
+        object-fit: cover; 
+        transition: .5s;
+      }
+      
+      .junior > span {
+        font-size: 3.8vh;
+        display: block;
+        text-align: center;
+        // position: absolute;
+        // height: 10vh;
+        line-height: 2.6;
+      }
+      
+      .junior:hover { flex: 1 1 50%; }
+      .junior:hover > img {
+        width: 100%;
+        height: 100%;
+      }
    }
 
    .button {
@@ -425,37 +442,6 @@ span{
     text-decoration: none;
 }
 
-   .projects {
-
-
-       margin-top: 10px;
-       img {
-           display: block;
-           width: 100%;
-           padding: 3px;
-           margin-bottom: 40px;
-        }
-
-        h2 {
-            color: $textcolour;
-            font-size: 24px;
-            font-family: 'Libre Baskerville', serif;
-            margin-bottom: 20px;
-            padding: 5px;
-            text-align: center;
-            font-weight: bold;
-            letter-spacing: 0.5px;
-            line-height: 36px;
-        }
-
-        p {
-            padding: 3px;
-            line-height: 18px;
-            text-align: center;
-        }
-
-   }
-
 }
 
 .mainFooter {
@@ -529,30 +515,8 @@ span{
     
     }
 
-    .content-two {
-        .projects {
-            img {
-                width: 100%;  
-            }
-        }
-    }
-
   }
 
-  @media screen and (min-width: 380px) {
-    .content-two {
-        .projects {
-            // img {
-            //     height: 60vh;
-            // }
-
-            p {
-                line-height: 22px;
-                padding: 5px;
-            }
-        }
-    }
-  }
 
   @media screen and (min-width: 440px) {
     .mainHeader {
@@ -582,13 +546,6 @@ span{
         }
       }
 
-      .content-two {
-          .projects {
-              p {
-                  text-align: center;
-              }
-          }
-      }
 
   }
 
@@ -603,21 +560,6 @@ span{
           .info2 {
               flex-direction: row;
               justify-content: space-evenly;
-
-              .projects {
-                  width: 100%;
-                  display: flex;
-                  flex-direction: row;
-                  justify-content: space-evenly;
-
-                  img {
-                      width: 100%;
-                  }
-              }
-          }
-
-          h2 {
-              text-align: center;
           }
       }
 
@@ -695,16 +637,6 @@ span{
 
       .talk {
           font-size: 36px;
-      }
-
-      .content-two {
-          h2 {
-              font-size: 36px;
-          }
-
-          h3 {
-              font-size: 32px;
-          }
       }
 
       .container {
@@ -1227,3 +1159,51 @@ span{
             }
         }
     
+// about page starts here
+.about {
+    font-family: 'Libre Baskerville', serif;
+    padding: 5px;
+    margin: 20px 10px 30px 10px;
+
+    .story {
+        text-align: center;
+        padding: 5px;
+        font-size: 16px;
+        margin-bottom: 40px;
+    }
+
+    .junior {
+        width: 80%;
+        flex: 1;
+        overflow: hidden;
+        transition: .5s;
+        margin: 0 2%;
+        box-shadow: 0 20px 30px rgba(0,0,0,.1);
+        line-height: 0;
+      }
+      
+      .junior > img {
+        width: 200%;
+        height: calc(50% - 50vh);
+        object-fit: cover; 
+        transition: .5s;
+      }
+      
+      .junior > span {
+        font-size: 3.8vh;
+        display: block;
+        text-align: center;
+        // position: absolute;
+        // height: 10vh;
+        line-height: 2.6;
+      }
+      
+      .junior:hover { flex: 1 1 50%; }
+      .junior:hover > img {
+        width: 100%;
+        height: 100%;
+      }
+
+
+
+}
