fixing portfolio page

--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -14,17 +14,38 @@
                 <div class="box2">
                     {{#each project}}
                     <div class="deets{{ID}}">
-                        <h2 class="Title">{{ Title }}</h2>
-                        <img class="pictures" src="images/{{ Images }}" alt="image">
+                        {{!-- <h2 class="Title">{{ Title }}</h2> --}}
+                        <div class="junior">
+                        <img src="images/{{ Images }}" alt="">
+                        <span>{{ Title }}</span>
+                        </div>
+
+                        <div class="media">
+                            <div class="media-boxes"></div>
+                            <div class="media-boxes"></div>
+                            <div class="media-boxes"></div>
+                        </div>
+
+                           <div class="lightbox">
+                            <span class="lightbox-close">X</span>
+                            <!-- this will be dynamic shortly -->
+                            <video src="/video/{{Video}}" muted autoplay controls></video>
+                            </div>
+
+                         {{!-- <video class="video" src="/video/{{Video}}" muted autoplay controls></video> --}}
 
                         <button class="play" href="/video/{{ ID }}">View More</button>
-                        <video class="hidden" src="/video/{{Video}}"></video>
 
-                        <p class="para">{{ Description }}</p>
+                        {{!-- <p class="para">{{ Description }}</p> --}}
+                        {{!-- id="play" class="open-lightbox" href="#" --}}
                     </div>
                     {{/each}}
                 </div>
 
-                
-
             </section>
+
+            {{!-- <section class="lightbox">
+            <span class="lightbox-close">X</span>
+            <!-- this will be dynamic shortly -->
+            <video src="video/House-Stark.mp4" muted autoplay controls></video>
+            </section> --}}
