--- a/sass/main.css
+++ b/sass/main.css
@@ -23,9 +23,11 @@ span {
   top: 80px;
   width: 100%;
   height: 100%;
+  border-radius: 5px;
   -webkit-transition: all .2s ease;
   transition: all .2s ease;
   pointer-events: none;
+  background-color: #daeafd;
 }
 
 .hidden {
@@ -743,7 +745,37 @@ span {
           justify-content: space-evenly;
 }
 
-.port-one .box2 a {
+.port-one .box2 .lightbox {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.9);
+  display: none;
+}
+
+.port-one .box2 .lightbox-on {
+  display: block;
+}
+
+.port-one .box2 video {
+  width: 80%;
+  margin-top: 10%;
+  border: thin solid #949393;
+}
+
+.port-one .box2 .lightbox-close {
+  position: absolute;
+  color: white;
+  right: 12px;
+  top: 12px;
+  cursor: pointer;
+  font-size: 2em;
+}
+
+.port-one .box2 button {
+  margin-left: 40px;
   width: 100px;
   background: transparent;
   color: #e55743;
@@ -751,17 +783,19 @@ span {
           box-shadow: 0 5px 0 #f71717;
   color: black;
   padding: 5px;
-  position: relative;
   text-decoration: none;
   text-transform: uppercase;
 }
 
-.port-one .box2 a:hover {
+.port-one .box2 button:hover {
   background: rgba(85, 2, 2, 0.03);
   cursor: pointer;
+  border-radius: 20px;
+  -webkit-transition: all .5s linear;
+  transition: all .5s linear;
 }
 
-.port-one .box2 a:active {
+.port-one .box2 button:active {
   -webkit-box-shadow: none;
           box-shadow: none;
   top: 5px;
@@ -774,280 +808,102 @@ span {
   text-align: center;
 }
 
-.port-one .box2 .para {
+.port-one .box2 p {
   text-align: center;
-  margin: 10px 0 20px 0;
+  margin: 30px 0 20px 0;
   font-size: 18px;
   font-style: italic;
   line-height: 22px;
 }
 
 .port-one .box2 .deets1 {
-  max-width: 100%;
-  text-align: center;
-  padding: 3px;
-  margin: 20px 0 60px 0;
-}
-
-.port-one .box2 .deets1 .Title {
-  margin: 20px 0 20px 0;
-  text-align: center;
-}
-
-.port-one .box2 .deets1 .para {
-  text-align: center;
-  padding: 4px;
-  margin: 10px 0 20px 20px;
-  font-size: 18px;
-  font-style: italic;
-  line-height: 22px;
+  margin-bottom: 40px;
 }
 
 .port-one .box2 .deets1 .video {
   width: 100%;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
-  padding-top: 10px;
+  padding-top: 20px;
 }
 
-.port-one .box2 .deets1 a {
-  width: 100px;
-  background: transparent;
-  color: #e55743;
-  -webkit-box-shadow: 0 5px 0 #f71717;
-          box-shadow: 0 5px 0 #f71717;
-  color: black;
-  padding: 5px;
-  position: relative;
-  text-decoration: none;
-  text-transform: uppercase;
+.port-one .box2 .deets1 span {
+  display: none;
 }
 
-.port-one .box2 .deets1 a:hover {
-  background: rgba(85, 2, 2, 0.03);
-  cursor: pointer;
+.port-one .box2 .deets2, .port-one .box2 .deets3, .port-one .box2 .deets4, .port-one .box2 .deets5 {
+  margin: 40px 0 40px 0;
+  width: 80%;
 }
 
-.port-one .box2 .deets1 a:active {
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  top: 5px;
-}
-
-.port-one .box2 .deets2 {
-  border-top: solid 1px #0727da;
-  text-align: center;
+.port-one .box2 .deets2 .junior, .port-one .box2 .deets3 .junior, .port-one .box2 .deets4 .junior, .port-one .box2 .deets5 .junior {
   width: 100%;
-  padding: 3px;
-  margin: 60px 0 60px 0;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  overflow: hidden;
+  -webkit-transition: .5s;
+  transition: .5s;
+  margin: 40px 0 40px 2%;
+  -webkit-box-shadow: 0 15px 15px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 15px 15px rgba(0, 0, 0, 0.1);
+  line-height: 0;
 }
 
-.port-one .box2 .deets2 img {
+.port-one .box2 .deets2 .junior > img, .port-one .box2 .deets3 .junior > img, .port-one .box2 .deets4 .junior > img, .port-one .box2 .deets5 .junior > img {
+  width: 200%;
+  height: calc(100% - 50vh);
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.port-one .box2 .deets2 .junior > span, .port-one .box2 .deets3 .junior > span, .port-one .box2 .deets4 .junior > span, .port-one .box2 .deets5 .junior > span {
+  font-size: 3.8vh;
+  display: block;
+  text-align: center;
+  line-height: 2.6;
+}
+
+.port-one .box2 .deets2 .junior:hover, .port-one .box2 .deets3 .junior:hover, .port-one .box2 .deets4 .junior:hover, .port-one .box2 .deets5 .junior:hover {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+}
+
+.port-one .box2 .deets2 .junior:hover > img, .port-one .box2 .deets3 .junior:hover > img, .port-one .box2 .deets4 .junior:hover > img, .port-one .box2 .deets5 .junior:hover > img {
   width: 100%;
-  margin: 20px 0 30px 30px;
+  height: 100%;
 }
 
-.port-one .box2 .deets2 .Title {
-  margin: 40px 0 20px 0;
-}
-
-.port-one .box2 .deets2 .para {
-  text-align: center;
-  margin: 10px 0 20px 0;
-  font-size: 18px;
-  font-style: italic;
-  line-height: 22px;
-}
-
-.port-one .box2 .deets2 .play {
-  text-align: center;
-  width: 100px;
-  background: transparent;
-  color: #e55743;
-  -webkit-box-shadow: 0 5px 0 #f71717;
-          box-shadow: 0 5px 0 #f71717;
-  color: black;
-  padding: 5px;
-  position: relative;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-.port-one .box2 .deets2 .play:hover {
-  background: rgba(85, 2, 2, 0.03);
-  cursor: pointer;
-}
-
-.port-one .box2 .deets2 .play:active {
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  top: 5px;
-}
-
-.port-one .box2 .deets3 {
-  border-top: solid 1px #0727da;
-  text-align: center;
-  width: 100%;
-  padding: 3px;
-  margin: 60px 0 20px 0;
-}
-
-.port-one .box2 .deets3 img {
-  width: 100%;
-  margin: 20px 0 30px 30px;
-}
-
-.port-one .box2 .deets3 .Title {
-  text-align: center;
-  margin: 40px 0 20px 0;
-}
-
-.port-one .box2 .deets3 .para {
-  text-align: center;
-  margin: 10px 0 20px 0;
-  font-size: 18px;
-  font-style: italic;
-  line-height: 22px;
-}
-
-.port-one .box2 .deets3 a {
-  text-align: center;
-  width: 100px;
-  background: transparent;
-  color: #e55743;
-  -webkit-box-shadow: 0 5px 0 #f71717;
-          box-shadow: 0 5px 0 #f71717;
-  color: black;
-  padding: 5px;
-  position: relative;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-.port-one .box2 .deets3 a:hover {
-  background: rgba(85, 2, 2, 0.03);
-  cursor: pointer;
-}
-
-.port-one .box2 .deets3 a:active {
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  top: 5px;
-}
-
-.port-one .box2 .deets4 {
-  border-top: solid 1px #0727da;
-  text-align: center;
-  width: 100%;
-  padding: 3px;
-  margin: 60px 0 20px 0;
-}
-
-.port-one .box2 .deets4 img {
-  width: 100%;
-  margin: 20px 0 30px 30px;
-}
-
-.port-one .box2 .deets4 .Title {
-  text-align: center;
-  margin: 40px 0 20px 0;
-}
-
-.port-one .box2 .deets4 .para {
-  text-align: center;
-  margin: 10px 0 20px 0;
-  font-size: 18px;
-  font-style: italic;
-  line-height: 22px;
-}
-
-.port-one .box2 .deets4 a {
-  text-align: center;
-  width: 100px;
-  background: transparent;
-  color: #e55743;
-  -webkit-box-shadow: 0 5px 0 #f71717;
-          box-shadow: 0 5px 0 #f71717;
-  color: black;
-  padding: 5px;
-  position: relative;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-.port-one .box2 .deets4 a:hover {
-  background: rgba(85, 2, 2, 0.03);
-  cursor: pointer;
-}
-
-.port-one .box2 .deets4 a:active {
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  top: 5px;
+.port-one .box2 .deets2 .video, .port-one .box2 .deets3 .video, .port-one .box2 .deets4 .video, .port-one .box2 .deets5 .video {
+  display: none;
 }
 
 @media screen and (min-width: 360px) {
-  .port-one .box2 h2 {
-    font-size: 22px;
+  .port-one .box2 .deets2 .junior > img, .port-one .box2 .deets3 .junior > img, .port-one .box2 .deets4 .junior > img, .port-one .box2 .deets5 .junior > img {
+    width: 150%;
+    height: calc(50% - 25vh);
+    -o-object-fit: cover;
+       object-fit: cover;
+    -webkit-transition: .5s;
+    transition: .5s;
+  }
+  .port-one .box2 .deets2 button, .port-one .box2 .deets3 button, .port-one .box2 .deets4 button, .port-one .box2 .deets5 button {
+    margin-left: 80px;
   }
 }
 
-@media screen and (min-width: 420px) {
-  p {
-    font-size: 24px;
-    line-height: 26px;
+@media screen and (min-width: 720px) {
+  .box2 {
+    margin-left: 40px;
+    padding: 10px;
+    width: 80%;
   }
-}
-
-@media screen and (min-width: 580px) {
-  .port-one .box2 h2 {
-    margin: 20px 0 10px 0;
-    text-align: center;
-  }
-  .port-one .box2 .video {
-    display: none;
-  }
-  .port-one .box2 p {
-    font-size: 18px;
-    line-height: 24px;
-  }
-}
-
-@media screen and (min-width: 660px) {
-  .port-one .box2 h2 {
-    margin: 40px 0 10px 0;
-    text-align: center;
-  }
-  .port-one .box2 .media {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-    margin-top: 40px;
-  }
-  .port-one .box2 .media .p-text {
-    font-size: 18px;
-    line-height: 24px;
-    padding: 5px;
-    margin-top: 80px;
-    margin-left: 20px;
-    height: 200px;
-  }
-}
-
-@media screen and (min-width: 840px) {
-  .box2 .boxes {
-    margin: 60px 0 60px 0;
-    display: block;
+  .box2 .media {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1059,10 +915,24 @@ span {
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
   }
-  .box2 .boxes .desk {
+  .box2 .media .media-boxes {
     width: 200px;
     height: 200px;
-    background-color: #0727da;
+    background-color: red;
+  }
+  .box2 .deets1 .media {
+    display: none;
+  }
+  .box2 .deets2 .junior > img, .box2 .deets3 .junior > img, .box2 .deets4 .junior > img, .box2 .deets5 .junior > img {
+    width: 100%;
+    height: calc(50% - 25vh);
+    -o-object-fit: cover;
+       object-fit: cover;
+    -webkit-transition: .5s;
+    transition: .5s;
+  }
+  .box2 .deets2 button, .box2 .deets3 button, .box2 .deets4 button, .box2 .deets5 button {
+    margin-left: 80px;
   }
 }
 
