--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,8 +28,10 @@ span{
     top: 80px;
     width: 100%;
     height: 100%;
+    border-radius: 5px;
     transition: all .2s ease;
     pointer-events: none;
+    background-color: rgb(218, 234, 253);
 }
 
 .hidden{
@@ -658,25 +660,57 @@ span{
         flex-direction: column;
         justify-content: space-evenly;
 
-        a {
-            // margin-left: 40px;
+        .lightbox
+            {
+            position: absolute;
+            top: 0;
+            height: 100%;
+            width: 100%;
+            text-align: center;
+            background: rgba(0,0,0,0.9);
+            display: none;
+
+            }
+
+            .lightbox-on {
+                display: block;
+            }
+            video {
+                width: 80%;
+                margin-top: 10%;
+                border: thin solid #949393;
+            }
+
+
+            .lightbox-close {
+                position: absolute;
+                color: white;
+                right: 12px;
+                top: 12px;
+                cursor: pointer;
+                font-size: 2em;
+            }
+
+        button {
+            margin-left: 40px;
             width: 100px;
             background: transparent;
             color: #e55743;
             box-shadow: 0 5px 0 rgb(247, 23, 23);
             color: rgb(0, 0, 0);
             padding: 5px;
-            position: relative;
             text-decoration: none;
             text-transform: uppercase;
         }
         
-        a:hover {
+        button:hover {
             background: rgba(85, 2, 2, 0.03);;
             cursor: pointer;
+            border-radius: 20px;
+            transition: all .5s linear;
         }
         
-        a:active {
+        button:active {
           box-shadow: none;
           top: 5px;
         }
@@ -688,261 +722,74 @@ span{
             text-align: center;
         }
 
-        .para {
+        p {
             text-align: center;
-            margin: 10px 0 20px 0;
+            margin: 30px 0 20px 0;
             font-size: 18px;
             font-style: italic;
             line-height: 22px;
         }
 
         .deets1 {
-
-            max-width: 100%;
-            text-align: center;
-            // height: 40vh;
-            padding: 3px;
-            margin: 20px 0 60px 0;
-
-            .Title {
-                margin: 20px 0 20px 0;
-                text-align: center;
-                // font-size: 18px;
-                // font-weight: bold;
-            }
-
-            .para {
-                text-align: center;
-                padding: 4px;
-                margin: 10px 0 20px 20px;
-                font-size: 18px;
-                font-style: italic;
-                line-height: 22px;
-            }
-
-           
+            margin-bottom: 40px;
             .video{
                 width: 100%;
                 // display: none;
-                margin-bottom: 40px;
+                margin-bottom: 20px;
                 flex: 1 1 auto;
-                padding-top: 10px;
-            }
+                padding-top: 20px;
+              }
 
-            // .lightbox
-            //     {
-            //         position: absolute;
-            //         top: 0;
-            //         height: 100%;
-            //         width: 100%;
-            //         text-align: center;
-            //         background: rgba(0,0,0,0.9);
-            //         display: none;
-
-            //     }
-
-            //     .lightbox-on {
-            //         display: block;
-            //     }
-            //     video {
-            //         width: 80%;
-            //         margin-top: 10%;
-            //         border: thin solid #949393;
-            //     }
-
-
-            //     .lightbox-close {
-            //         position: absolute;
-            //         color: white;
-            //         right: 12px;
-            //         top: 12px;
-            //         cursor: pointer;
-            //         font-size: 2em;
-            //     }
-
-            a {
-                // margin-left: 40px;
-                width: 100px;
-                background: transparent;
-                color: #e55743;
-                box-shadow: 0 5px 0 rgb(247, 23, 23);
-                color: rgb(0, 0, 0);
-                padding: 5px;
-                position: relative;
-                text-decoration: none;
-                text-transform: uppercase;
-            }
-            
-            a:hover {
-                background: rgba(85, 2, 2, 0.03);;
-                cursor: pointer;
-            }
-            
-            a:active {
-              box-shadow: none;
-              top: 5px;
-            }
+              span {
+                  display: none;
+              }
         }
 
-        .deets2 {
-            border-top: solid 1px $textcolour;
-            text-align: center;
-            // align-items: center;
-            width: 100%;
-            // height: 40vh;
-            padding: 3px;
-            margin: 60px 0 60px 0;
-
-            img {
+        .deets2, .deets3, .deets4, .deets5 {
+            margin: 40px 0 40px 0;
+            width: 80%;
+            .junior {
                 width: 100%;
-                margin: 20px 0 30px 30px;
-            }
-
-            .Title {
-
-                margin: 40px 0 20px 0;
-            }
-
-            .para {
+                flex: 1;
+                overflow: hidden;
+                transition: .5s;
+                margin: 40px 0 40px 2%;
+                box-shadow: 0 15px 15px rgba(0,0,0,.1);
+                line-height: 0;
+              }
+              
+              .junior > img {
+                width: 200%;
+                height: calc(100% - 50vh);
+                object-fit: cover; 
+                transition: .5s;
+              }
+              
+              .junior > span {
+                font-size: 3.8vh;
+                display: block;
                 text-align: center;
-                margin: 10px 0 20px 0;
-                font-size: 18px;
-                font-style: italic;
-                line-height: 22px;
-            }
+                // position: absolute;
+                // height: 10vh;
+                line-height: 2.6;
+              }
+              
+              .junior:hover { flex: 1 1 50%; }
+              .junior:hover > img {
+                width: 100%;
+                height: 100%;
+              }
 
-            .play {
-                text-align: center;
-                // margin-left: 40px;
-                width: 100px;
-                background: transparent;
-                color: #e55743;
-                box-shadow: 0 5px 0 rgb(247, 23, 23);
-                color: rgb(0, 0, 0);
-                padding: 5px;
-                position: relative;
-                text-decoration: none;
-                text-transform: uppercase;
-            }
-            
-            .play:hover {
-                background: rgba(85, 2, 2, 0.03);;
-                cursor: pointer;
-            }
-            
-            .play:active {
-              box-shadow: none;
-              top: 5px;
-            }
-
-    }
-
-    .deets3 {
-        border-top: solid 1px $textcolour;
-        text-align: center;
-        // align-items: center;
-        width: 100%;
-        // height: 40vh;
-        padding: 3px;
-        margin: 60px 0 20px 0;
-
-        img {
-            width: 100%;
-            margin: 20px 0 30px 30px;
+              .video{
+                display: none;
+                // margin-bottom: 20px;
+                // flex: 1 1 auto;
+                // padding-top: 20px;
+              }
         }
 
 
-        .Title {
-            text-align: center;
-            margin: 40px 0 20px 0;
-        }
-
-        .para {
-            text-align: center;
-            margin: 10px 0 20px 0;
-            font-size: 18px;
-            font-style: italic;
-            line-height: 22px;
-        }
-
-        a {
-            text-align: center;
-            // margin-left: 40px;
-            width: 100px;
-            background: transparent;
-            color: #e55743;
-            box-shadow: 0 5px 0 rgb(247, 23, 23);
-            color: rgb(0, 0, 0);
-            padding: 5px;
-            position: relative;
-            text-decoration: none;
-            text-transform: uppercase;
-        }
-        
-        a:hover {
-            background: rgba(85, 2, 2, 0.03);;
-            cursor: pointer;
-        }
-        
-        a:active {
-          box-shadow: none;
-          top: 5px;
-        }
-
-}
-    .deets4 {
-        border-top: solid 1px $textcolour;
-        text-align: center;
-        // align-items: center;
-        width: 100%;
-        // height: 40vh;
-        padding: 3px;
-        margin: 60px 0 20px 0;
-
-        img {
-            width: 100%;
-            margin: 20px 0 30px 30px;
-        }
-
-
-        .Title {
-            text-align: center;
-            margin: 40px 0 20px 0;
-        }
-
-        .para {
-            text-align: center;
-            margin: 10px 0 20px 0;
-            font-size: 18px;
-            font-style: italic;
-            line-height: 22px;
-        }
-
-        a {
-            text-align: center;
-            // margin-left: 40px;
-            width: 100px;
-            background: transparent;
-            color: #e55743;
-            box-shadow: 0 5px 0 rgb(247, 23, 23);
-            color: rgb(0, 0, 0);
-            padding: 5px;
-            position: relative;
-            text-decoration: none;
-            text-transform: uppercase;
-        }
-        
-        a:hover {
-            background: rgba(85, 2, 2, 0.03);;
-            cursor: pointer;
-        }
-        
-        a:active {
-          box-shadow: none;
-          top: 5px;
-        }
-
-}
+  
 }
 
 }
@@ -951,99 +798,62 @@ span{
 @media screen and (min-width: 360px) {
     .port-one {
         .box2 {
-            h2 {
-                font-size: 22px;
-            }
+            .deets2, .deets3, .deets4, .deets5 {
+                .junior > img {
+                    width: 150%;
+                    height: calc(50% - 25vh);
+                    object-fit: cover; 
+                    transition: .5s;
+                  }
 
-            // p {
-            //     font-size: 24px;
-            //     line-height: 26px;
-            // }
+                  button {
+                      margin-left: 80px;
+                  }
+            }
         }
     }
 }
 
-@media screen and (min-width: 420px) {
-    p {
-        font-size: 24px;
-        line-height: 26px;
-    }
-}
+@media screen and (min-width: 720px) {
+    .box2 {
+        margin-left: 40px;
+        padding: 10px;
+        width: 80%;
+        .media {
+            // display: block;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
 
-
-@media screen and (min-width: 580px) {
-    .port-one {
-        .box2 {
-            h2 {
-                margin: 20px 0 10px 0;
-                text-align: center;
+            .media-boxes {
+                width: 200px;
+                height: 200px;
+                background-color: red;
             }
+        }
 
-            .video {
+        .deets1 {
+            .media {
                 display: none;
             }
-            p {
-                font-size: 18px;
-                line-height: 24px;
-                // width: 300px;
-            }
         }
-    }
-}
 
-@media screen and (min-width: 660px) {
-    .port-one {
-        .box2 {
-            h2 {
-                margin: 40px 0 10px 0;
-                text-align: center;
-            }
-
-            // .deets2 {
-            //     .p-text {
-            //         height: 100px;
-            //     }
-            // }
-            .media {
+        .deets2, .deets3, .deets4, .deets5 {
+            .junior > img {
                 width: 100%;
-                display: flex;
-                flex-direction: row;
-                justify-content: space-evenly;
-                margin-top: 40px;
-                // height: 25vh;
+                height: calc(50% - 25vh);
+                object-fit: cover; 
+                transition: .5s;
+              }
 
-              
-
-                .p-text {
-                    font-size: 18px;
-                    line-height: 24px;
-                    padding: 5px;
-                    margin-top: 80px;
-                    margin-left: 20px;
-                    height: 200px;
-                }
-            }
-          
+              button {
+                  margin-left: 80px;
+              }
         }
+        
     }
 }
 
-@media screen and (min-width: 840px) {
-  .box2 {
-    .boxes {
-        margin: 60px 0 60px 0;
-        display: block;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        .desk {
-            width: 200px;
-            height: 200px;
-            background-color: $textcolour;
-        }
-    }
-  }
-}
 
 
 
