--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,18 +1,19 @@
 <section class="about">
    <div class="junior">
     <img src="images/collins.jpg" alt="Picture of Collins">
-    <span>COLLINS</span>
+    <span>Collins</span>
   </div>
     <p class="story">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis mollitia quam, perspiciatis distinctio placeat minima, qui nostrum adipisci totam sit, accusantium earum quod magni pariatur eligendi asperiores? Voluptates, sapiente dolor!
+        Web Designer, Motion and Graphic Designer. Currently studying Interactive Media Design at Fanshawe College. My mantra in life is "if you can conceive the idea then you can bring it to life...". The concept of bringing ideas to life through codes, designing on an app or building a model from scratch fascinates me and spurs me on to keep creating. Huge Football fan (Go Manchester United), and in my spare time i love to cook (or order take-out).
     </p>
     <div class="junior">
     <img src="images/collins_2.jpg" alt="Picture of Collins">
-    <span>COLLINS</span>
+    <span>Collins</span>
   </div>
 
 </section>
 
 <div class="demo">
-    <video class="video" src="video/sportsnet_ad.mp4" muted autoplay controls></video>
+    <video class="video" src="video/Demo_Reel.mp4" muted autoplay controls></video>
+    <button id="play" class="open-lightbox" href="#">Watch Video</button>
 </div>
