--- a/sass/main.css
+++ b/sass/main.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   max-width: 1200px;
   margin-top: 20px;
-  padding: 20px;
+  padding: 10px;
 }
 
 * {
@@ -16,18 +16,6 @@ body {
   font-family: Helvetica, sans-serif;
   -webkit-transition: all .2s ease;
   transition: all .2s ease;
-}
-
-span {
-  z-index: 0;
-  top: 80px;
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
-  -webkit-transition: all .2s ease;
-  transition: all .2s ease;
-  pointer-events: none;
-  background-color: #daeafd;
 }
 
 .hidden {
@@ -145,11 +133,13 @@ span {
 }
 
 .background {
+  padding: 20px;
   margin-bottom: 40px;
 }
 
 .background .loader {
-  max-width: 15rem;
+  max-width: 20rem;
+  padding: 20px;
   width: 100%;
   height: auto;
   stroke-linecap: round;
@@ -637,7 +627,7 @@ span {
     margin: 20px 10px 30px 10px;
   }
   .background {
-    margin-left: 80px;
+    margin-left: 40px;
   }
   .content-one .text1 {
     line-height: 24px;
@@ -646,8 +636,7 @@ span {
 
 @media screen and (min-width: 660px) {
   .background .loader {
-    margin-left: 120px;
-    max-width: 20rem;
+    margin-left: 80px;
   }
   .content-two .info2 {
     -webkit-box-orient: horizontal;
@@ -698,15 +687,15 @@ span {
 }
 
 @media screen and (min-width: 960px) {
+  .container {
+    padding: 40px;
+  }
   .mainHeader .headNav .navList .navitem {
     font-size: 44px;
     margin: 30px 40px 30px 40px;
   }
   .background {
     margin-left: 100px;
-  }
-  .background .loader {
-    max-width: 30rem;
   }
   .content-one {
     margin-bottom: 60px;
@@ -730,9 +719,19 @@ span {
   font-family: 'Libre Baskerville', serif;
   margin: 20px 20px 80px 20px;
   padding: 10px;
+  max-width: 840px;
+}
+
+.port-one h2 {
+  text-align: center;
+  font-size: 28px;
+  color: #0727da;
 }
 
 .port-one .box2 {
+  max-width: 720px;
+  padding: 15px;
+  margin-top: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -745,37 +744,8 @@ span {
           justify-content: space-evenly;
 }
 
-.port-one .box2 .lightbox {
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  text-align: center;
-  background: rgba(0, 0, 0, 0.9);
-  display: none;
-}
-
-.port-one .box2 .lightbox-on {
-  display: block;
-}
-
-.port-one .box2 video {
-  width: 80%;
-  margin-top: 10%;
-  border: thin solid #949393;
-}
-
-.port-one .box2 .lightbox-close {
-  position: absolute;
-  color: white;
-  right: 12px;
-  top: 12px;
-  cursor: pointer;
-  font-size: 2em;
-}
-
 .port-one .box2 button {
-  margin-left: 40px;
+  margin: 0 auto;
   width: 100px;
   background: transparent;
   color: #e55743;
@@ -790,7 +760,7 @@ span {
 .port-one .box2 button:hover {
   background: rgba(85, 2, 2, 0.03);
   cursor: pointer;
-  border-radius: 20px;
+  border-radius: 5px;
   -webkit-transition: all .5s linear;
   transition: all .5s linear;
 }
@@ -813,32 +783,66 @@ span {
   margin: 30px 0 20px 0;
   font-size: 18px;
   font-style: italic;
-  line-height: 22px;
+  line-height: 24px;
+  padding: 10px;
+}
+
+.port-one .box2 article {
+  text-align: center;
+  font-size: 18px;
+  font-style: italic;
+  line-height: 24px;
+  padding: 10px;
+  margin: 10px 0 10px 0;
 }
 
 .port-one .box2 .deets1 {
+  width: 100%;
   margin-bottom: 40px;
 }
 
-.port-one .box2 .deets1 .video {
+.port-one .box2 .deets1 video {
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   padding-top: 20px;
 }
 
+.port-one .box2 .deets1 img {
+  display: none;
+}
+
 .port-one .box2 .deets1 span {
   display: none;
 }
 
+.port-one .box2 .deets1 .button-two {
+  display: none;
+}
+
 .port-one .box2 .deets2, .port-one .box2 .deets3, .port-one .box2 .deets4, .port-one .box2 .deets5 {
+  max-width: 640px;
+  width: 100%;
   margin: 40px 0 40px 0;
   width: 80%;
 }
 
+.port-one .box2 .deets2 .lightbox-close, .port-one .box2 .deets3 .lightbox-close, .port-one .box2 .deets4 .lightbox-close, .port-one .box2 .deets5 .lightbox-close {
+  display: none;
+}
+
+.port-one .box2 .deets2 video, .port-one .box2 .deets3 video, .port-one .box2 .deets4 video, .port-one .box2 .deets5 video {
+  display: none;
+}
+
+.port-one .box2 .deets2 #play, .port-one .box2 .deets3 #play, .port-one .box2 .deets4 #play, .port-one .box2 .deets5 #play {
+  display: none;
+}
+
 .port-one .box2 .deets2 .junior, .port-one .box2 .deets3 .junior, .port-one .box2 .deets4 .junior, .port-one .box2 .deets5 .junior {
+  max-width: 720px;
   width: 100%;
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -854,6 +858,7 @@ span {
 
 .port-one .box2 .deets2 .junior > img, .port-one .box2 .deets3 .junior > img, .port-one .box2 .deets4 .junior > img, .port-one .box2 .deets5 .junior > img {
   width: 200%;
+  padding: 20px;
   height: calc(100% - 50vh);
   -o-object-fit: cover;
      object-fit: cover;
@@ -862,7 +867,7 @@ span {
 }
 
 .port-one .box2 .deets2 .junior > span, .port-one .box2 .deets3 .junior > span, .port-one .box2 .deets4 .junior > span, .port-one .box2 .deets5 .junior > span {
-  font-size: 3.8vh;
+  font-size: 24px;
   display: block;
   text-align: center;
   line-height: 2.6;
@@ -879,10 +884,6 @@ span {
   height: 100%;
 }
 
-.port-one .box2 .deets2 .video, .port-one .box2 .deets3 .video, .port-one .box2 .deets4 .video, .port-one .box2 .deets5 .video {
-  display: none;
-}
-
 @media screen and (min-width: 360px) {
   .port-one .box2 .deets2 .junior > img, .port-one .box2 .deets3 .junior > img, .port-one .box2 .deets4 .junior > img, .port-one .box2 .deets5 .junior > img {
     width: 150%;
@@ -892,15 +893,23 @@ span {
     -webkit-transition: .5s;
     transition: .5s;
   }
-  .port-one .box2 .deets2 button, .port-one .box2 .deets3 button, .port-one .box2 .deets4 button, .port-one .box2 .deets5 button {
-    margin-left: 80px;
+}
+
+@media screen and (min-width: 540px) {
+  .deets1 article, .deets2 article, .deets3 article, .deets4 article, .deets5 article {
+    font-size: 28px;
+    line-height: 24px;
   }
 }
 
 @media screen and (min-width: 720px) {
+  .port-one {
+    padding: 20px;
+    margin: 0 auto;
+  }
   .box2 {
     margin-left: 40px;
-    padding: 10px;
+    padding: 20px;
     width: 80%;
   }
   .box2 .media {
@@ -916,20 +925,33 @@ span {
             justify-content: space-evenly;
   }
   .box2 .media .media-boxes {
+    margin-left: 20px;
     width: 200px;
     height: 200px;
     background-color: red;
+    margin-bottom: 20px;
+  }
+  .box2 .deets1 article {
+    font-size: 28px;
   }
   .box2 .deets1 .media {
     display: none;
   }
+  .box2 .deets2 article, .box2 .deets3 article, .box2 .deets4 article, .box2 .deets5 article {
+    font-size: 28px;
+  }
   .box2 .deets2 .junior > img, .box2 .deets3 .junior > img, .box2 .deets4 .junior > img, .box2 .deets5 .junior > img {
     width: 100%;
-    height: calc(50% - 25vh);
     -o-object-fit: cover;
        object-fit: cover;
     -webkit-transition: .5s;
     transition: .5s;
+  }
+  .box2 .deets2 .junior > span, .box2 .deets3 .junior > span, .box2 .deets4 .junior > span, .box2 .deets5 .junior > span {
+    font-size: 24px;
+    display: block;
+    text-align: center;
+    line-height: 2.8;
   }
   .box2 .deets2 button, .box2 .deets3 button, .box2 .deets4 button, .box2 .deets5 button {
     margin-left: 80px;
@@ -1041,19 +1063,28 @@ input[type=submit] {
 }
 
 .about {
+  margin: 0 auto;
   font-family: 'Libre Baskerville', serif;
-  padding: 5px;
-  margin: 20px 10px 30px 10px;
+  padding: 20px;
+  margin-top: 40px;
 }
 
 .about .story {
+  max-width: 840px;
+  margin: 0 auto;
+  width: 100%;
   text-align: center;
-  padding: 5px;
-  font-size: 16px;
+  margin-top: 20px;
+  padding: 10px;
+  font-size: 18px;
   margin-bottom: 40px;
+  font-style: italic;
+  line-height: 24px;
 }
 
 .about .junior {
+  margin: 0 auto;
+  max-width: 720px;
   width: 80%;
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -1061,10 +1092,10 @@ input[type=submit] {
   overflow: hidden;
   -webkit-transition: .5s;
   transition: .5s;
-  margin: 0 2%;
   -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
           box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
   line-height: 0;
+  margin-bottom: 40px;
 }
 
 .about .junior > img {
@@ -1092,5 +1123,70 @@ input[type=submit] {
 .about .junior:hover > img {
   width: 100%;
   height: 100%;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+}
+
+.demo {
+  margin: 0 auto;
+  width: 80%;
+  padding: 20px;
+}
+
+.demo .video {
+  margin-bottom: 20px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding-top: 20px;
+}
+
+.demo button {
+  margin: 0 auto;
+  margin-left: 40px;
+  width: 100px;
+  background: transparent;
+  color: #e55743;
+  -webkit-box-shadow: 0 5px 0 #f71717;
+          box-shadow: 0 5px 0 #f71717;
+  color: black;
+  padding: 5px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.demo button:hover {
+  background: rgba(85, 2, 2, 0.03);
+  cursor: pointer;
+  border-radius: 5px;
+  -webkit-transition: all .5s linear;
+  transition: all .5s linear;
+}
+
+.demo button:active {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  top: 5px;
+}
+
+.demo video {
+  width: 100%;
+  margin-bottom: 20px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding-top: 20px;
+}
+
+@media screen and (min-width: 540px) {
+  .junior {
+    height: 400px;
+  }
+}
+
+@media screen and (min-width: 720px) {
+  .junior {
+    height: 600px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
