--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,7 @@ $bgcolour: rgb(235, 225, 225);
    margin: 0 auto;
    max-width: 1200px;
    margin-top: 20px;
-   padding: 20px;
+   padding: 10px;
 }
 
 * {
@@ -22,17 +22,17 @@ body{
 
 
 
-span{
-    // position: fixed;
-    z-index: 0;
-    top: 80px;
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-    transition: all .2s ease;
-    pointer-events: none;
-    background-color: rgb(218, 234, 253);
-}
+// span{
+//     // position: fixed;
+//     z-index: 0;
+//     top: 80px;
+//     width: 100%;
+//     height: 100%;
+//     border-radius: 5px;
+//     transition: all .2s ease;
+//     pointer-events: none;
+//     // background-color: rgb(218, 234, 253);
+// }
 
 .hidden{
     display: none;
@@ -135,9 +135,11 @@ span{
 }
 
 .background {
+    padding: 20px;
     margin-bottom: 40px;
     .loader {
-        max-width: 15rem;
+        max-width: 20rem;
+        padding: 20px;
         width: 100%;
         height: auto;
         stroke-linecap: round;
@@ -540,7 +542,7 @@ span{
         }
     }
       .background {
-          margin-left: 80px;
+          margin-left: 40px;
       }
       .content-one {
         .text1 {
@@ -554,8 +556,8 @@ span{
   @media screen and (min-width: 660px) {
      .background {
         .loader {
-            margin-left: 120px;
-            max-width: 20rem;
+            margin-left: 80px;
+            // max-width: 20rem;
         }
      }
       .content-two {
@@ -609,6 +611,9 @@ span{
   }
   
   @media screen and (min-width: 960px) {
+      .container {
+          padding: 40px;
+      }
       .mainHeader {
           .headNav {
               .navList {
@@ -621,9 +626,9 @@ span{
       }
     .background {
         margin-left: 100px;
-        .loader {
-            max-width: 30rem;
-        }
+        // .loader {
+        //     // max-width: 30rem;
+        // }
      }
       .content-one {
           margin-bottom: 60px;
@@ -653,46 +658,27 @@ span{
     font-family: 'Libre Baskerville', serif;
     margin: 20px 20px 80px 20px;
     padding: 10px;
+    max-width: 840px;
+
+    h2 {
+        text-align: center;
+        font-size: 28px;
+        color: $textcolour;
+    }
+
 
     .box2 {
+        max-width: 720px;
+        padding: 15px;
+        margin-top: 40px;
         // flex: 1 1 auto;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
 
-        .lightbox
-            {
-            position: absolute;
-            top: 0;
-            height: 100%;
-            width: 100%;
-            text-align: center;
-            background: rgba(0,0,0,0.9);
-            display: none;
-
-            }
-
-            .lightbox-on {
-                display: block;
-            }
-            video {
-                width: 80%;
-                margin-top: 10%;
-                border: thin solid #949393;
-            }
-
-
-            .lightbox-close {
-                position: absolute;
-                color: white;
-                right: 12px;
-                top: 12px;
-                cursor: pointer;
-                font-size: 2em;
-            }
 
         button {
-            margin-left: 40px;
+            margin: 0 auto;
             width: 100px;
             background: transparent;
             color: #e55743;
@@ -706,7 +692,7 @@ span{
         button:hover {
             background: rgba(85, 2, 2, 0.03);;
             cursor: pointer;
-            border-radius: 20px;
+            border-radius: 5px;
             transition: all .5s linear;
         }
         
@@ -727,28 +713,58 @@ span{
             margin: 30px 0 20px 0;
             font-size: 18px;
             font-style: italic;
-            line-height: 22px;
+            line-height: 24px;
+            padding: 10px;
+        }
+
+        article {
+            text-align: center;
+            font-size: 18px;
+            font-style: italic;
+            line-height: 24px;
+            padding: 10px;
+            margin: 10px 0 10px 0;
         }
 
         .deets1 {
+            width: 100%;
             margin-bottom: 40px;
-            .video{
+            video{
                 width: 100%;
                 // display: none;
-                margin-bottom: 20px;
+                margin-bottom: 10px;
                 flex: 1 1 auto;
                 padding-top: 20px;
+              }
+
+              img {
+                  display: none;
               }
 
               span {
                   display: none;
               }
+              .button-two {
+                  display: none;
+              }
         }
 
         .deets2, .deets3, .deets4, .deets5 {
+            max-width: 640px;
+            width: 100%;
+            .lightbox-close {
+                display: none;
+            }
+            video {
+                display: none;
+            }
+            #play {
+                display: none;
+            }
             margin: 40px 0 40px 0;
             width: 80%;
             .junior {
+                max-width: 720px;
                 width: 100%;
                 flex: 1;
                 overflow: hidden;
@@ -760,13 +776,14 @@ span{
               
               .junior > img {
                 width: 200%;
+                padding: 20px;
                 height: calc(100% - 50vh);
                 object-fit: cover; 
                 transition: .5s;
               }
               
               .junior > span {
-                font-size: 3.8vh;
+                font-size: 24px;
                 display: block;
                 text-align: center;
                 // position: absolute;
@@ -780,12 +797,6 @@ span{
                 height: 100%;
               }
 
-              .video{
-                display: none;
-                // margin-bottom: 20px;
-                // flex: 1 1 auto;
-                // padding-top: 20px;
-              }
         }
 
 
@@ -806,18 +817,31 @@ span{
                     transition: .5s;
                   }
 
-                  button {
-                      margin-left: 80px;
-                  }
+                //  #play {
+                //       margin-left: 80px;
+                //   }
             }
         }
     }
 }
 
+@media screen and (min-width: 540px) {
+    .deets1, .deets2, .deets3, .deets4, .deets5 {
+        article {
+            font-size: 28px;
+            line-height: 24px;
+        }
+    }
+}
+
 @media screen and (min-width: 720px) {
+    .port-one {
+        padding: 20px;
+        margin: 0 auto;
+    }
     .box2 {
         margin-left: 40px;
-        padding: 10px;
+        padding: 20px;
         width: 80%;
         .media {
             // display: block;
@@ -826,24 +850,44 @@ span{
             justify-content: space-evenly;
 
             .media-boxes {
+                margin-left: 20px;
                 width: 200px;
                 height: 200px;
                 background-color: red;
+                margin-bottom: 20px;
             }
         }
 
         .deets1 {
+            article {
+                font-size: 28px;
+            }
             .media {
                 display: none;
             }
         }
 
         .deets2, .deets3, .deets4, .deets5 {
+            article {
+                font-size: 28px;
+            }
+
+         
+          
             .junior > img {
                 width: 100%;
-                height: calc(50% - 25vh);
+                // height: calc(50% - 25vh);
                 object-fit: cover; 
                 transition: .5s;
+              }
+
+              .junior > span {
+                font-size: 24px;
+                display: block;
+                text-align: center;
+                // position: absolute;
+                // height: 10vh;
+                line-height: 2.8;
               }
 
               button {
@@ -971,28 +1015,41 @@ span{
     
 // about page starts here
 .about {
+    margin: 0 auto;
     font-family: 'Libre Baskerville', serif;
-    padding: 5px;
-    margin: 20px 10px 30px 10px;
+    padding: 20px;
+    margin-top: 40px;
+    // margin: 60px 10px 30px 10px;
 
     .story {
+        max-width: 840px;
+        margin: 0 auto;
+        width: 100%;
         text-align: center;
-        padding: 5px;
-        font-size: 16px;
+        margin-top: 20px;
+        padding: 10px;
+        font-size: 18px;
         margin-bottom: 40px;
+        font-style: italic;
+        line-height: 24px;
     }
 
     .junior {
+        margin: 0 auto;
+        // height: 300px;
+        max-width: 720px;
         width: 80%;
         flex: 1;
         overflow: hidden;
         transition: .5s;
-        margin: 0 2%;
+        // margin: 0 2%;
         box-shadow: 0 20px 30px rgba(0,0,0,.1);
         line-height: 0;
+        margin-bottom: 40px;
       }
       
       .junior > img {
+        // max-width: 600px;
         width: 200%;
         height: calc(50% - 50vh);
         object-fit: cover; 
@@ -1012,8 +1069,64 @@ span{
       .junior:hover > img {
         width: 100%;
         height: 100%;
+        filter: grayscale(100%);
       }
 
+}
+
+.demo {
+    .video{
+        // display: none;
+        margin-bottom: 20px;
+        flex: 1 1 auto;
+        padding-top: 20px;
+      }
+    margin: 0 auto;
+    width: 80%;
+    padding: 20px;
+    button {
+        margin: 0 auto;
+        margin-left: 40px;
+        width: 100px;
+        background: transparent;
+        color: #e55743;
+        box-shadow: 0 5px 0 rgb(247, 23, 23);
+        color: rgb(0, 0, 0);
+        padding: 5px;
+        text-decoration: none;
+        text-transform: uppercase;
+    }
+    
+    button:hover {
+        background: rgba(85, 2, 2, 0.03);;
+        cursor: pointer;
+        border-radius: 5px;
+        transition: all .5s linear;
+    }
+    
+    button:active {
+      box-shadow: none;
+      top: 5px;
+    }
+    video {
+        width: 100%;
+        // display: none;
+        margin-bottom: 20px;
+        flex: 1 1 auto;
+        padding-top: 20px;
+    }
+}
+
+@media screen and (min-width: 540px) {
+    .junior {
+        height: 400px;
+    }
+}
 
 
+@media screen and (min-width: 720px) {
+    .junior {
+        height: 600px;
+    }
+    
 }
