--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -14,7 +14,7 @@
                 <div class="box2">
                     {{#each project}}
                     <div class="deets{{ID}}">
-                        <div class="junior">
+                        <div class="junior1">
                         <img src="images/{{ Images }}" alt="">
                         <span>{{ Title }}</span>
                         </div>
