--- a/sass/main.css
+++ b/sass/main.css
@@ -841,7 +841,7 @@ body {
   display: none;
 }
 
-.port-one .box2 .deets2 .junior, .port-one .box2 .deets3 .junior, .port-one .box2 .deets4 .junior, .port-one .box2 .deets5 .junior {
+.port-one .box2 .deets2 .junior1, .port-one .box2 .deets3 .junior1, .port-one .box2 .deets4 .junior1, .port-one .box2 .deets5 .junior1 {
   max-width: 720px;
   width: 100%;
   -webkit-box-flex: 1;
@@ -856,7 +856,7 @@ body {
   line-height: 0;
 }
 
-.port-one .box2 .deets2 .junior > img, .port-one .box2 .deets3 .junior > img, .port-one .box2 .deets4 .junior > img, .port-one .box2 .deets5 .junior > img {
+.port-one .box2 .deets2 .junior1 > img, .port-one .box2 .deets3 .junior1 > img, .port-one .box2 .deets4 .junior1 > img, .port-one .box2 .deets5 .junior1 > img {
   width: 200%;
   padding: 20px;
   height: calc(100% - 50vh);
@@ -866,26 +866,26 @@ body {
   transition: .5s;
 }
 
-.port-one .box2 .deets2 .junior > span, .port-one .box2 .deets3 .junior > span, .port-one .box2 .deets4 .junior > span, .port-one .box2 .deets5 .junior > span {
+.port-one .box2 .deets2 .junior1 > span, .port-one .box2 .deets3 .junior1 > span, .port-one .box2 .deets4 .junior1 > span, .port-one .box2 .deets5 .junior1 > span {
   font-size: 24px;
   display: block;
   text-align: center;
   line-height: 2.6;
 }
 
-.port-one .box2 .deets2 .junior:hover, .port-one .box2 .deets3 .junior:hover, .port-one .box2 .deets4 .junior:hover, .port-one .box2 .deets5 .junior:hover {
+.port-one .box2 .deets2 .junior1:hover, .port-one .box2 .deets3 .junior1:hover, .port-one .box2 .deets4 .junior1:hover, .port-one .box2 .deets5 .junior1:hover {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 50%;
           flex: 1 1 50%;
 }
 
-.port-one .box2 .deets2 .junior:hover > img, .port-one .box2 .deets3 .junior:hover > img, .port-one .box2 .deets4 .junior:hover > img, .port-one .box2 .deets5 .junior:hover > img {
+.port-one .box2 .deets2 .junior1:hover > img, .port-one .box2 .deets3 .junior1:hover > img, .port-one .box2 .deets4 .junior1:hover > img, .port-one .box2 .deets5 .junior1:hover > img {
   width: 100%;
   height: 100%;
 }
 
 @media screen and (min-width: 360px) {
-  .port-one .box2 .deets2 .junior > img, .port-one .box2 .deets3 .junior > img, .port-one .box2 .deets4 .junior > img, .port-one .box2 .deets5 .junior > img {
+  .port-one .box2 .deets2 .junior1 > img, .port-one .box2 .deets3 .junior1 > img, .port-one .box2 .deets4 .junior1 > img, .port-one .box2 .deets5 .junior1 > img {
     width: 150%;
     height: calc(50% - 25vh);
     -o-object-fit: cover;
@@ -940,14 +940,14 @@ body {
   .box2 .deets2 article, .box2 .deets3 article, .box2 .deets4 article, .box2 .deets5 article {
     font-size: 28px;
   }
-  .box2 .deets2 .junior > img, .box2 .deets3 .junior > img, .box2 .deets4 .junior > img, .box2 .deets5 .junior > img {
+  .box2 .deets2 .junior1 > img, .box2 .deets3 .junior1 > img, .box2 .deets4 .junior1 > img, .box2 .deets5 .junior1 > img {
     width: 100%;
     -o-object-fit: cover;
        object-fit: cover;
     -webkit-transition: .5s;
     transition: .5s;
   }
-  .box2 .deets2 .junior > span, .box2 .deets3 .junior > span, .box2 .deets4 .junior > span, .box2 .deets5 .junior > span {
+  .box2 .deets2 .junior1 > span, .box2 .deets3 .junior1 > span, .box2 .deets4 .junior1 > span, .box2 .deets5 .junior1 > span {
     font-size: 24px;
     display: block;
     text-align: center;
