--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -20,7 +20,7 @@
                         </div>
                         <video src="/video/{{Video}}" muted autoplay controls></video>
                     {{!-- <p>{{Description}}</p> --}}
-                    <h2>{{Description}}</h2>
+                    <h2 class="heading">{{Description}}</h2>
                     <article>{{Challenge}}</article>
 
                     
